# projectinit-ai

./: .gitignore  CLAUDE.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.agents/checklists/: checklist_did.md  checklist_etl_spatial.md  checklist_iv.md  checklist_matching.md  checklist_ml.md  checklist_outputs.md  checklist_rdd.md  checklist_scm.md
.agents/workflows/: audit-replication.md  contractor-mode.md  crear_template.py  data-analysis.md  projectinit.md  qa-quarto.md  research-ideation.md  split-pdf.md
02_scripts/: 00_master.do  00_master.py
02_scripts/ados/: aer_style.py  gemini_lit_extractor.py  split_pdf_reader.py  stata_packages.do  template_dime.do
02_scripts/analysis/: did_main.py  rdd_metro_avaluo.py
02_scripts/data_preparation/: generate_synthetic_data.py
02_scripts/validation/: did_parallel_trends.py
gallery/: aer_example.md  balance_showcase.md
gallery/plots/: example_automated_table.tex  generate_all_plots.py  generate_density_comparison.py  generate_did_parallel.py  generate_four_panels.py  generate_hte_subgroups.py  generate_irf_plot.py  generate_iv_first_stage.py  generate_massive_event_study.py  generate_rkd_plot.py  generate_scm_placebo.py  generate_scm_plot.py  generate_spatial_scatter.py  generate_survival_km.py  generate_time_series.py  generate_two_panels.py  table_generator.py
gallery/tables/: example_aer_table.tex  example_balance_grouped.tex  example_balance_subgroups.tex  example_balance_table.tex  example_ddd_table.tex  example_heterogeneity_matrix.tex  (+4 more)
projectinit_ai/: cli.py  tables.py
(+41 files in other folders)
