[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "projectinit-ai"
version = "0.1.0"
description = "The Next-Gen Economics Research Boilerplate (DIME Standards + AI Agents)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Maykol Medrano" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pandas==2.2.0",
    "geopandas==0.14.3",
    "statsmodels==0.14.1",
    "scikit-learn==1.4.0",
    "matplotlib==3.8.2",
    "seaborn==0.13.2",
    "google-generativeai==0.5.2",
    "PyMuPDF==1.24.4",
]

[project.scripts]
projectinit = "projectinit_ai.cli:main"
projectinit-ai = "projectinit_ai.cli:main"

[tool.setuptools.packages.find]
include = ["projectinit_ai*"]
